Shorten next/prev post button title length, Fix post/page alignment clearfix,

--- a/sass/skycraft/skycraft.scss
+++ b/sass/skycraft/skycraft.scss
@@ -118,3 +118,8 @@ a.skip-link {
 }
 
 .navbar h1 { font-weight: $font-weight-normal; }
+
+// Fix chrome focus outline
+:focus {
+  outline: none;
+}
